@@ -279,22 +279,6 @@ the return code of
 indicates failure if one of the databases had a failure, even though
 the operation on other databases was successful.
 .TP
-\fBprofilerstart\fP \fIdatabase\fP [\fIdatabase\fP ...]
-.PD 0
-.TP
-\fBprofilerstop\fP \fIdatabase\fP [\fIdatabase\fP ...]
-.PD
-Starts or stops the collection of profiling logs for the given database. The property
-.B profilerlogpath
-must be set for the given database, and it should point to a directory where the logs
-will be gathered. The filenames of the logs have the format:
-.I proflog_<database>_YYYY-MM-DD_HH-MM-SS.json
-where the last part is the date and time when the collection started. Please
-note that a file recording the pid of the profiler is written in the log
-directory, therefore each database needs to have a different
-.B profilerlogpath
-value.
-.TP
 \fBmonetdb\fP \fBsnapshot\fP \fBwrite\fP \fIdbname\fP
 Takes a snapshot of the given database and writes it to stdout.
 .TP
