@@ -861,403 +861,4 @@ forkMserver(const char *database, sabdb** stats, bool force)
 	return(newErr("%s", strerror(e)));
 }
 
-#define BUFLEN 1024
-
-#define STETHOSCOPE	"pystethoscope"
-
-/**
- * Fork stethoscope and detatch, after performing sanity checks. The assumption
- * is that each mserver5 process can have at most one stethoscope process
- * attached to it.
- */
-err
-fork_profiler(const char *dbname, sabdb **stats, char **log_path)
-{
-	pid_t pid;
-	char *error = NO_ERR;
-	char *pidfilename = NULL;
-	confkeyval *ckv = NULL, *kv;
-	size_t pidfnlen;
-	FILE *pidfile;
-	char *profiler_executable;
-#if 0
-	char *beat_frequency = NULL;
-#endif
-	char *tmp_exe;
-	struct stat path_info;
-	int error_code;
-	dpair dp;
-
-	pthread_mutex_lock(&_mero_topdp_lock);
-	dp = _mero_topdp->next;
-	while (dp != NULL && strcmp(dp->dbname, dbname) != 0) {
-		dp = dp->next;
-	}
-	pthread_mutex_unlock(&_mero_topdp_lock);
-	if (dp == NULL)
-		return newErr("Unknown database %s", dbname);
-	pthread_mutex_lock(&dp->fork_lock);
-
-	*log_path = NULL;
-	error = msab_getStatus(stats, dbname);
-	if (error != NULL) {
-		pthread_mutex_unlock(&dp->fork_lock);
-		return error;
-	}
-
-	if (*stats == NULL) {
-		/* TODO: What now? */
-		pthread_mutex_unlock(&dp->fork_lock);
-		return newErr("Null stats for db %s", dbname);
-	}
-
-	/* Find the profiler executable. The mserver is running as
-	 * /path/to/installation/mserver5
-	 * and the profiler executable should be:
-	 * /path/to/installation/stethoscope
-	 */
-	tmp_exe = strdup(_mero_mserver);
-	if (tmp_exe == NULL) {
-		pthread_mutex_unlock(&dp->fork_lock);
-		return newErr("Cannot find the profiler executable\n"
-					  "    The python implementation of stethoscope needs"
-					  " to be in the same directory as mserver5.");
-	} else {
-		char *server_filename = "mserver5";
-		char *profiler_filename = STETHOSCOPE;
-		char *s = strstr(tmp_exe, server_filename);
-		size_t executable_len = 0;
-
-		if (s == NULL || strncmp(s, server_filename, strlen(server_filename)) != 0) {
-			pthread_mutex_unlock(&dp->fork_lock);
-			error = newErr("Unexpected executable (missing the string \"%s\")", server_filename);
-			free(tmp_exe);
-			return error;
-		}
-
-		executable_len = strlen(tmp_exe) + strlen(profiler_filename) - strlen(server_filename) + 1;
-		*s = '\0';
-		profiler_executable = malloc(executable_len);
-		snprintf(profiler_executable, executable_len, "%s%s%s",
-				 tmp_exe, profiler_filename, s + 8);
-		free(tmp_exe);
-#ifndef __COVERITY__
-		/* hide for coverity: time-of-check time-of-use; it's ok to do
-		 * this since if the file were to disappear between this check
-		 * and the use, things won't fall apart */
-		if (stat(profiler_executable, &path_info) == -1) {
-			error = newErr("Cannot find the profiler executable\n"
-						   "    The python implementation of stethoscope needs"
-						   " to be in the same directory as mserver5.");
-			goto cleanup;
-		}
-#endif
-	}
-
-	/* Verify that the requested db is running */
-	if ((*stats)->state != SABdbRunning) {
-		/* server is not running, shoo */
-		error = newErr("Database %s is not running.", dbname);
-		goto cleanup;
-	}
-
-	/* find the path that the profiler will be storing files */
-	ckv = getDefaultProps();
-	readAllProps(ckv, (*stats)->path);
-#if 0
-	kv = findConfKey(ckv, PROFILERBEATFREQ);
-	if (kv) {
-		beat_frequency = kv->val;
-	}
-#endif
-	kv = findConfKey(ckv, PROFILERLOGPROPERTY);
-
-	if (kv == NULL) {
-		error = newErr("Property '"PROFILERLOGPROPERTY"' not set for db %s\n",
-					   dbname);
-		goto cleanup;
-	}
-
-	*log_path = strdup(kv->val);
-
-	/* Check that the log_path exists and create it if it does not */
-	if ((error_code = mkdir(*log_path, 0755)) == -1 &&
-		(errno != EEXIST ||
-		 (error_code = stat(*log_path, &path_info)) == -1 ||
-		 !S_ISDIR(path_info.st_mode))) {
-		/* we couldn't create a directory and there wasn't one already */
-		if (error_code == -1) {
-			char error_message[128];
-			if (strerror_r(errno, error_message, sizeof(error_message)) != 0)
-				strcpy(error_message, "unknown error");
-			error = newErr("%s: %s", *log_path, error_message);
-		} else {
-			error = newErr("File %s exists but is not a directory.", *log_path);
-		}
-		free(*log_path);
-		*log_path = NULL;
-		goto cleanup;
-	}
-
-	/* construct the filename of the pid file */
-	pidfnlen = strlen(*log_path) + strlen("/profiler.pid") + 1;
-	pidfilename = malloc(pidfnlen);
-	if (pidfilename == NULL) {
-		error = newErr("Cannot allocate buffer while starting profiler");
-		goto cleanup;
-	}
-	snprintf(pidfilename, pidfnlen, "%s/profiler.pid", *log_path);
-
-	/* Make sure another instance of stethoscope is not running. */
-	errno = 0;
-	if ((pidfile = fopen(pidfilename, "r")) != NULL) {
-		char buf[8];
-		long pid;
-		/* The pid file exists. See if a process with this pid exists,
-		 * and if yes, if it is stethoscope.
-		 */
-
-		if (fgets(buf, sizeof(buf), pidfile) == NULL) {
-			error = newErr("cannot read from pid file %s: %s\n",
-						   pidfilename, strerror(errno));
-			fclose(pidfile);
-			free(*log_path);
-			*log_path = NULL;
-			goto cleanup;
-		}
-		fclose(pidfile);
-
-		/* Verify that what we read is actually a number */
-		errno = 0;
-		pid = strtol(buf, NULL, 10);
-		if (errno != 0) {
-			error = newErr("contents of the pid file are not correct: %s\n",
-						   strerror(errno));
-			free(*log_path);
-			*log_path = NULL;
-			goto cleanup;
-		}
-
-		// Open /proc/<pid>/comm and compare the contents to "stethoscope"
-		// This of course is specific to Linux
-		size_t fn_size = strlen("/proc/comm") + 9;
-		char *filename = malloc(fn_size);
-		if (filename == NULL) {
-			error = newErr("cannot allocate %zu bytes: %s\n",
-						   fn_size, strerror(errno));
-			free(*log_path);
-			*log_path = NULL;
-			goto cleanup;
-		}
-		snprintf(filename, fn_size, "/proc/%ld/comm", pid);
-
-		FILE *comm = fopen(filename, "r");
-		if (comm == NULL) {
-			/* We cannot open the file for the process with the specified pid,
-			 * so the process is not running.
-			 */
-			free(filename);
-			goto startup;
-		}
-		char buf2[BUFLEN];
-		size_t len = fread(buf2, 1, BUFLEN, comm);
-
-		if(ferror(comm)) {
-			error = newErr("cannot read from file %s\n", filename);
-			free(filename);
-			free(*log_path);
-			fclose(comm);
-			*log_path = NULL;
-			goto cleanup;
-		}
-		if (len == BUFLEN)
-			len--;
-		buf2[len] = 0;
-
-		char expected_command[] = STETHOSCOPE;
-		size_t command_len = strlen(expected_command);
-		if (strncmp(buf2, expected_command, command_len) == 0) {
-			error = newErr("profiler already running for %s\n", dbname);
-			free(filename);
-			free(*log_path);
-			fclose(comm);
-			*log_path = NULL;
-			goto cleanup;
-		}
-
-		fclose(comm);
-		free(filename);
-	} else if (errno == EACCES || errno == EPERM) {
-		/* We cannot open the pidfile, bail out */
-		error = newErr("pid file %s already exists, but is not accessible. Is the profiler already running?",
-					   pidfilename);
-		free(*log_path);
-		*log_path = NULL;
-		goto cleanup;
-	}
-
-  startup:
-	/* Open the pid file */
-	if ((pidfile = fopen(pidfilename, "w")) == NULL) {
-		error = newErr("unable to open %s for writing", pidfilename);
-		free(*log_path);
-		*log_path = NULL;
-		goto cleanup;
-	}
-
-	pid = fork();
-	if (pid == 0) {
-		char timestamp[20];
-		const char *argv[512];
-		int arg_idx = 0;
-		size_t log_filename_len;
-		char *log_filename;
-		time_t current_time;
-		struct tm *tm_ctime;
-
-		fclose(pidfile);
-		/* construct the log output file */
-		log_filename_len = strlen(*log_path) + strlen("/proflog_") + strlen(dbname) + 26;
-		log_filename = malloc(log_filename_len);
-		if (log_filename == NULL) {
-			/* TODO What now? */
-			Mfprintf(stderr, "failed to allocate buffer\n");
-			exit(1);
-		}
-		current_time = time(NULL);
-		tm_ctime = localtime(&current_time);
-		strftime(timestamp, sizeof(timestamp), "%Y-%m-%d_%H:%M:%S", tm_ctime);
-		snprintf(log_filename, log_filename_len, "%s/proflog_%s_%s.json",
-				 *log_path, dbname, timestamp);
-
-		/* build the arguments */
-		argv[arg_idx++] = profiler_executable;
-		argv[arg_idx++] = "-Fjson";  /* JSON output */
-		argv[arg_idx++] = "-d";
-		argv[arg_idx++] = dbname;
-#if 0							/* no such option in pystethoscope */
-		if (beat_frequency) {
-			argv[arg_idx++] = "-b";
-			argv[arg_idx++] = beat_frequency;
-		}
-#endif
-		argv[arg_idx++] = "-o";
-		argv[arg_idx++] = log_filename;
-		/* execute */
-		execv(profiler_executable, (char **) argv);
-		exit(1);
-	} else {
-		/* write pid of stethoscope */
-		Mfprintf(pidfile, "%d", (int)pid);
-		fclose(pidfile);
-	}
-
-  cleanup:
-	freeConfFile(ckv);
-	free(ckv);
-	free(profiler_executable);
-	free(pidfilename);
-	pthread_mutex_unlock(&dp->fork_lock);
-	return error;
-}
-
-err
-shutdown_profiler(const char *dbname, sabdb **stats)
-{
-	err error=NO_ERR;
-	confkeyval *ckv = NULL, *kv;
-	size_t pidfnlen = 0;
-	char *pidfilename = NULL;
-	FILE *pidfile;
-	char buf[BUFSIZ];
-	size_t nbytes;
-	pid_t pid;
-
-	error = msab_getStatus(stats, dbname);
-	if (error != NULL) {
-		return error;
-	}
-
-	if (*stats == NULL) {
-		/* TODO: What now? */
-		error = newErr("Null stats for db %s", dbname);
-		return error;
-	}
-
-	/* Verify that the requested db is running */
-	if ((*stats)->state != SABdbRunning) {
-		/* server is not running, shoo */
-		error = newErr("Database %s is not running.", dbname);
-		goto cleanup;
-	}
-
-	/* Find the pid file and make sure the profiler is running */
-	ckv = getDefaultProps();
-	readAllProps(ckv, (*stats)->path);
-	kv = findConfKey(ckv, PROFILERLOGPROPERTY);
-
-	if (kv == NULL) {
-		error = newErr("Property '"PROFILERLOGPROPERTY"' not set for db %s\n",
-					   dbname);
-		goto cleanup;
-	}
-
-	/* construct the filename of the pid file */
-	pidfnlen = strlen(kv->val) + strlen("/profiler.pid") + 1;
-	pidfilename = malloc(pidfnlen);
-	if (pidfilename == NULL) {
-		error = newErr("Cannot allocate buffer while shutting down of profiler");
-		goto cleanup;
-	}
-	snprintf(pidfilename, pidfnlen, "%s/profiler.pid", kv->val);
-
-	if ((pidfile = fopen(pidfilename, "r")) == NULL) {
-		error = newErr("Unable to open %s for reading", pidfilename);
-		goto cleanup;
-	}
-
-	clearerr(pidfile);
-	nbytes = fread(buf, 1, BUFSIZ, pidfile);
-
-	if (ferror(pidfile)) {
-		error = newErr("Cannot read pid (%s) from file %s", buf, pidfilename);
-		fclose(pidfile);
-		goto cleanup;
-	}
-	fclose(pidfile);
-
-	if (buf[nbytes - 1] == '\n') {
-		buf[nbytes - 1] = '\0';
-	}
-
-	pid = (pid_t)strtol(buf, NULL, 10);
-	if (pid == 0 && errno == EINVAL) {
-		error = newErr("File contents %s not a valid pid", buf);
-		goto cleanup;
-	}
-
-	if (kill(pid, SIGTERM) == -1) {
-		char error_message[BUFSIZ];
-		if (strerror_r(errno, error_message, BUFSIZ) != 0)
-			strcpy(error_message, "unknown error");
-		error = newErr("%s", error_message);
-		goto cleanup;
-	}
-
-	/* All went well. Remove the pidfile */
-	if (remove(pidfilename) != 0) {
-		error = newErr("Profiler seems to have stopped, but cannot remove pid file.");
-	}
-
-  cleanup:
-	freeConfFile(ckv);
-	free(ckv);
-	free(pidfilename);
-	if (error) {
-		msab_freeStatus(stats);
-		*stats = NULL;
-	}
-	return error;
-}
-
 /* vim:set ts=4 sw=4 noexpandtab: */
