@@ -1,3 +1,7 @@
 # ChangeLog file for sql/src/backends/monet5/merovingian
 # This file is updated with mchangelog
 
+* Tue May 11 2021 Panagiotis Koutsourakis <kutsurak@monetdbsolutions.com>
+- Removed the deprecated monetdb commands `profilerstart` and
+  `profilerstop`.
+
